# openturnament

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  artist_api.py  pyproject.toml  requirements.txt
data/: data.json  testdata.py
src/: config.py  logging.yaml  logging_setup.py  main.py
src/app/: config.py  crud.py  routes.py
src/app/database/: __init__.py  base.py  players.py
src/app/routes/: __init__.py  base.py  players.py  root.py
src/assets/: record.tape
src/static/css/: main.css
src/templates/: about.html  catalog.html  main.html  players.html  search.html
src/templates/artist/: profile.html
src/templates/partials/: _player_group.html  _player_row.html
src/templates/players/: player_club_cell.html  player_name_cell.html  player_team_cell.html  players_row.html
src/templates/shared/: _base.html  _footer.html  _header.html  _player_row.html  _player_row_edit.html
